[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Danmaku/bernkastel_anim.tres" type="SpriteFrames" id=1]
[ext_resource path="res://src/Danmaku/bernkastel.gd" type="Script" id=2]
[ext_resource path="res://res/spr/effects/00000009.png" type="Texture" id=3]
[ext_resource path="res://src/Danmaku/magic_circle.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 47.7568
height = 40.0

[node name="Bernkastel" type="AnimatedSprite"]

frames = ExtResource( 1 )
animation = "idle"
frame = 7
playing = true
script = ExtResource( 2 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Transform", "Z" ]
bulletmanager = NodePath("Null")
background = null

[node name="YellowCircle" type="Sprite" parent="." index="0"]

visible = false
show_behind_parent = true
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 217, 220, 234, 224 )
script = ExtResource( 4 )
_sections_unfolded = [ "Material", "Region", "Transform", "Visibility" ]

[node name="WhiteCircle" type="Sprite" parent="." index="1"]

visible = false
show_behind_parent = true
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 448, 220, 217 )
script = ExtResource( 4 )
_sections_unfolded = [ "Material", "Region", "Visibility" ]

[node name="GreenCircle" type="Sprite" parent="." index="2"]

visible = false
show_behind_parent = true
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 220, 442, 220, 217 )
script = ExtResource( 4 )
_sections_unfolded = [ "Material", "Pause", "Region", "Visibility" ]

[node name="BlackCircle" type="Sprite" parent="." index="3"]

visible = false
show_behind_parent = true
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 442, 450, 220, 217 )
script = ExtResource( 4 )
_sections_unfolded = [ "Material", "Region", "Visibility" ]

[node name="RedCircle" type="Sprite" parent="." index="4"]

visible = false
show_behind_parent = true
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 678, 450, 223, 217 )
script = ExtResource( 4 )
_sections_unfolded = [ "Material", "Region", "Visibility" ]

[node name="BlueCircle" type="Sprite" parent="." index="5"]

visible = false
show_behind_parent = true
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 678, 225, 223, 217 )
script = ExtResource( 4 )
_sections_unfolded = [ "Material", "Region", "Visibility" ]

[node name="Area2D" type="Area2D" parent="." index="6"]

position = Vector2( 0, -90 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 10
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

position = Vector2( -5.40359, 76.1907 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]


